# codexcoach

./: .gitignore  .npmignore  LICENSE  README.md  install.ps1  install.sh  package.json  pyproject.toml
.codex-plugin/: plugin.json
docs/: demo-report.md
skills/codex-coach/: SKILL.md
skills/codex-coach/agents/: openai.yaml
skills/codex-coach/references/: config-suggestions.md  privacy.md  prompt-rubric.md
src/codex_coach/: __init__.py  cli.py  install.py  instruction_audit.py  parser.py  paths.py  prompts.py  redaction.py  reports.py  timeutil.py
tests/: test_cli_and_install.py  test_instruction_audit.py  test_plugin.py  test_scan.py
tests/fixtures/codex/archived_sessions/: rollout-archived.jsonl
tests/fixtures/codex/sessions/2026/05/21/: rollout-sample.jsonl
